Cleanup (using progressive API)
GitOrigin-RevId: 658efc2982f1ed11c8bfcd249ccd768c28704afd